fixed overflow issues

--- a/app/assets/stylesheets/api/projects.scss
+++ b/app/assets/stylesheets/api/projects.scss
@@ -58,7 +58,7 @@
     padding-left: 16.5%;
     padding-right: 18.5%;
     background-color: whitesmoke;
-    height: 80.3vh;
+    height: 81.7vh;
     display: flex;
     flex-wrap: wrap;
     overflow-y: auto;
